--- a/src/assets/css/m.less
+++ b/src/assets/css/m.less
@@ -45,6 +45,7 @@
             // height: 120px;
             background: wheat;
             display: none;
+            z-index: 10;
             >li{
                 width: 128px;
                 height: 30px;
